changed the errorhandler put and post
